test/expected/explain_fau_v-c++17.out
explain void f(auto)
               ^
16: error: "auto" parameters not supported until C++20
